--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -540,89 +540,62 @@ a {
 
 .catalog {
   &__items {
-    display: flex;
-    flex-wrap: wrap;
   }
 }
 
 .catalog-item {
-  width: 220px;
-  margin: 10px;
-  padding: 10px;
+  width: 100%;
+  height: 50px;
+  margin: 10px 0;
+  padding: 5px 10px 5px 110px;
   background: @main-bg;
   color: @main-color;
   border-radius: @block-border-radius;
   .item-shadow;
   cursor: pointer;
   text-decoration: none;
-
-  &__header {
-    font-size: 14px;
-    margin-bottom: 10px;
-    text-align: justify;
-    height: 20px;
-    position: relative;
-  }
+  display: block;
+  position: relative;
+  font-size: 12px;
 
   &__hid {
     height: 20px;
     border: 1px solid;
-    line-height: 18px;
+    //line-height: 18px;
     padding: 0 5px;
     font-weight: bold;
     border-radius: 3px;
-    margin-right: 10px;
-    position: absolute;
-    left: 0;
-    top: 0;
-  }
-
-  &__replies {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-
-  &__image-wrap {
-    position: relative;
-    left: -10px;
-    width: 220px;
-    height: 100px;
-    margin-bottom: 5px;
+    margin-right: 5px;
+    font-size: 14px;
   }
 
   &__image {
-    max-width: 200px;
-    max-height: 100px;
-    display: block;
-    margin: 0 auto;
-    padding: 0;
-    .item-shadow;
-    border-radius: @block-border-radius;
+    position: absolute;
+    width: 100px;
+    height: 50px;
+    top: 0;
+    left: 0;
+    background-repeat: no-repeat;
+    background-position: center 25%;
+    background-size: cover;
+    background-color: #ccc;
+    border-radius:  @block-border-radius 0 0 @block-border-radius;
   }
 
   &__title {
-    font-size: 14px;
     font-weight: bold;
-    line-height: 15px;
-    max-height: 30px;
-    overflow: hidden;
-    margin-bottom: 5px;
   }
 
-  &__text {
-    font-size: 12px;
-    line-height: 15px;
-    max-height: 75px;
+  &__header {
+    height: 20px;
     overflow: hidden;
-    text-align: justify;
-    margin-bottom: 5px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   &__meta {
+    height: 20px;
     font-size: 12px;
-    line-height: 15px;
-    text-align: left;
   }
 
   &__meta-label {
