--- a/src/imageboard/templates/imageboard/catalog_page.html
+++ b/src/imageboard/templates/imageboard/catalog_page.html
@@ -1,4 +1,5 @@
 {% extends 'imageboard/base.html' %}
+{% load num2hex %}
 
 {% block page_title %}
     {{ config.SITE_NAME }} :: /{{ board.hid }}/ {{ board.name }} :: Каталог
@@ -14,36 +15,29 @@
             {% for thread in threads %}
                 {% with op_post=thread.op  %}
                     <a class="catalog-item" href="{% url 'thread_page' board_hid=thread.board.hid thread_hid=thread.hid %}">
-
-                        <div class="catalog-item__header">
-                            <span class="catalog-item__hid">
-                                0x{{ thread.hid }}
-                            </span>
-                        </div>
-
                         <div class="catalog-item__image-wrap">
                             {% with image=op_post.images.all|first  %}
-                                <img
+                                <div
                                     class="catalog-item__image"
-                                    src="{{MEDIA_URL}}{{image.thumb_path}}"
-                                    alt="{{ image.original_name }}"
-                                />
+                                    style="background-image: url('{{MEDIA_URL}}{{image.thumb_path}}')"
+                                >
+                                </div>
                             {% endwith %}
                         </div>
 
-                        <div class="catalog-item__title">
-                            {{ op_post.title }}
-                        </div>
-
-                        <div class="catalog-item__text">
-                            {{ op_post.text }}
+                        <div class="catalog-item__header">
+                            <span class="catalog-item__hid">0x{{ thread.hid|num2hex }}</span>
+                            <span class="catalog-item__title">
+                                {{ op_post.title }}
+                            </span>
+                            <span class="catalog-item__text">
+                                {{ op_post.text }}
+                            </span>
                         </div>
 
                         <div class="catalog-item__meta">
                             <span class="catalog-item__meta-label">Создан:</span> {{ thread.created_at|date:config.DATE_TIME_FORMAT }}
-                            <br/>
                             <span class="catalog-item__meta-label">Обновлен:</span> {{ thread.updated_at|date:config.DATE_TIME_FORMAT }}
-                            <br/>
                             <span class="catalog-item__meta-label">Постов:</span> {{ thread.posts_count }}
                         </div>
                     </a>
