--- a/src/imageboard/templates/imageboard/parts/post.html
+++ b/src/imageboard/templates/imageboard/parts/post.html
@@ -52,7 +52,7 @@
                         class="post__image-wrap"
                         href="{{MEDIA_URL}}{{image.path}}"
                         target="_blank"
-                        data-lightbox="{{ image.hid }}"
+                        data-lightbox="{{ post.hid }}"
                     >
                         <img
                             class="post__image"
