User-hidden posts and threads (WIP)

--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -332,6 +332,10 @@ a {
   .item-shadow;
   padding: 10px 0;
 
+  &--hidden {
+    opacity: 0.5;
+  }
+
   &--deleted {
     color: @disabled-color;
   }
@@ -391,6 +395,10 @@ a {
 .post {
   padding: 10px 20px;
   position: relative;
+
+  &--hidden {
+    opacity: 0.5;
+  }
 
   &--deleted {
     color: @disabled-color;
