--- a/src/imageboard/templates/imageboard/parts/thread.html
+++ b/src/imageboard/templates/imageboard/parts/thread.html
@@ -10,7 +10,7 @@
         </div>
     </div>
 {% else %}
-    <div class="thread" id="thread-{{ thread.id }}" data-id="{{ thread.id }}">
+    <div class="thread" id="thread-{{ thread.id }}" data-id="{{ thread.id }}" data-hid="0x{{ thread.hid|num2hex }}000">
         <div class="thread__op-post">
             {% include 'imageboard/parts/post.html' with post=thread.op %}
         </div>
