--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -470,22 +470,42 @@ a {
 
   &__button {
     display: inline-block;
-    background: #ccc;
+    background: #999;
     width: 20px;
     height: 20px;
     padding: 0;
     border: 0;
-    margin: 0 10px 0 0;
-    font-size: 20px;
+    margin: 0 5px 0 0;
+    font-size: 18px;
+    line-height: 20px;
     cursor: pointer;
     border-radius: @input-border-radius;
+    color: #fff;
 
     &:last-child {
       margin-right: 0;
     }
 
     &:hover {
-      background: #aaa;
+      background: #333;
+    }
+  }
+
+  &__icon {
+    cursor: default;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    font-size: 18px;
+    line-height: 20px;
+    text-align: center;
+    margin: 0 5px 0 0;
+    box-shadow: inset 0 0 0 1px #999;
+    border-radius: @input-border-radius;
+    color: #999;
+
+    &:last-child {
+      margin-right: 0;
     }
   }
 
