--- a/src/imageboard/templates/imageboard/parts/post.html
+++ b/src/imageboard/templates/imageboard/parts/post.html
@@ -74,7 +74,9 @@
                         class="post__image-wrap"
                         href="{{MEDIA_URL}}{{image.path}}"
                         target="_blank"
-                        data-lightbox="{{ post.hid }}"
+                        data-lightbox="{{ post.id }}"
+                        data-alt="{{ image.original_name }}"
+                        data-title="{{ image.original_name }} :: {{ image.width }}x{{ image.height }} :: {{ image.size|filesizeformat }}"
                     >
                         <img
                             class="post__image"
@@ -82,6 +84,7 @@
                             alt="{{ image.original_name }}"
                             width="{{ image.thumb_width }}"
                             height="{{ image.thumb_height }}"
+                            title="{{ image.original_name }} :: {{ image.width }}x{{ image.height }} :: {{ image.size|filesizeformat }}"
                         />
                     </a>
                 {% endfor %}
