Board header (wip)

--- a/src/imageboard/static/imageboard/style.less
+++ b/src/imageboard/static/imageboard/style.less
@@ -930,5 +930,29 @@ a {
 }
 
 
+.board-header {
+  width: 100%;
+  margin: 20px 0;
+  padding: 10px 20px;
+  background: @main-bg;
+  color: @main-color;
+  border-radius: @block-border-radius;
+  .item-shadow;
 
+  &__title {
+    line-height: 40px;
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
 
+  &__description {
+    margin-bottom: 20px;
+  }
+
+  &__rules {}
+
+  &__rules-header {
+    font-size: 20px;
+  }
+}
