--- a/src/imageboard/templates/imageboard/thread_page.html
+++ b/src/imageboard/templates/imageboard/thread_page.html
@@ -7,6 +7,7 @@
 
 {% block header %}
     {% include 'imageboard/parts/header.html' %}
+    {% include 'imageboard/parts/board_header.html' %}
 {% endblock %}
 
 {% block content %}
